--- a/build.gradle
+++ b/build.gradle
@@ -26,19 +26,19 @@ repositories {
 
 
 dependencies {
-    compile('org.springframework.boot:spring-boot-starter-aop')
-    compile('org.springframework.boot:spring-boot-starter-cache')
+//    compile('org.springframework.boot:spring-boot-starter-aop')
+//    compile('org.springframework.boot:spring-boot-starter-cache')
 //    compile('org.springframework.boot:spring-boot-starter-data-jpa')
 //    compile('org.springframework.boot:spring-boot-starter-data-redis')
-    compile('org.springframework.boot:spring-boot-starter-freemarker')
-    compile('org.springframework.boot:spring-boot-starter-security')
-    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
-    compile('org.springframework.boot:spring-boot-starter-validation')
+//    compile('org.springframework.boot:spring-boot-starter-freemarker')
+//    compile('org.springframework.boot:spring-boot-starter-security')
+//    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+//    compile('org.springframework.boot:spring-boot-starter-validation')
     compile('org.springframework.boot:spring-boot-starter-web')
-    compile('org.springframework.boot:spring-boot-starter-websocket')
+//    compile('org.springframework.boot:spring-boot-starter-websocket')
 //    compile('org.springframework.session:spring-session')
     runtime('org.springframework.boot:spring-boot-devtools')
-    runtime('mysql:mysql-connector-java')
+//    runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('org.springframework.security:spring-security-test')
+//    testCompile('org.springframework.security:spring-security-test')
 }
