设置热加载

--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ repositories {
     mavenCentral()
 }
 
+bootRun{
+    addResources = true
+}
 
 dependencies {
 //    compile('org.springframework.boot:spring-boot-starter-aop')
@@ -49,3 +52,5 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
 //    testCompile('org.springframework.security:spring-security-test')
 }
+
+
