--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,12 @@
 debug: true
+server:
+  port: 8888
+  address: 192.168.1.34
 spring:
   thymeleaf:
     cache: false
+logging:
+  level:
+    org:
+      springframework:
+        web: DEBUG
