--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     compile 'org.springframework.boot:spring-boot-starter-social-twitter:1.5.9.RELEASE'
 
     compile 'org.webjars:jquery:2.1.4'
-    compile 'org.webjars:materializecss:1.0.0-rc.1'
+    compile 'org.webjars:materializecss:0.96.0'
 }
 
 
