3.处理表单和复杂的URL映射

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,6 +5,10 @@ server:
 spring:
   thymeleaf:
     cache: false
+  mvc:
+    locale: zh
+  messages:
+    cache-seconds: 0
 logging:
   level:
     org:
