--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,8 @@ repositories {
 }
 
 dependencies {
+    compile('org.springframework.boot:spring-boot-starter-web')
+
 //    compile('org.springframework.boot:spring-boot-starter-aop')
 //    compile('org.springframework.boot:spring-boot-starter-cache')
 //    compile('org.springframework.boot:spring-boot-starter-data-jpa')
@@ -39,19 +41,35 @@ dependencies {
 //    compile('org.springframework.boot:spring-boot-starter-freemarker')
 //    compile('org.springframework.boot:spring-boot-starter-security')
     compile('org.springframework.boot:spring-boot-starter-thymeleaf')
+    compile('org.springframework.boot:spring-boot-starter-social-twitter')
 //    compile('org.springframework.boot:spring-boot-starter-validation')
-    compile('org.springframework.boot:spring-boot-starter-web')
+
 //    compile('org.springframework.boot:spring-boot-starter-websocket')
 //    compile('org.springframework.session:spring-session')
     runtime('org.springframework.boot:spring-boot-devtools')
 //    runtime('mysql:mysql-connector-java')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 //    testCompile('org.springframework.security:spring-security-test')
+    //自定义ConfigurationProperties
+    compileOnly "org.springframework.boot:spring-boot-configuration-processor"
 
-    compile 'org.springframework.boot:spring-boot-starter-social-twitter:1.5.9.RELEASE'
+
 
     compile 'org.webjars:jquery:2.1.4'
     compile 'org.webjars:materializecss:0.96.0'
 }
+
+compileJava.dependsOn(processResources)
+
+idea {
+    module {
+        // if you hate browsing Javadoc
+        downloadJavadoc = true
+
+        // and love reading sources :)
+        downloadSources = true
+    }
+}
+
 
 
