--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,11 @@
 debug: true
 server:
   port: 8888
-#  address: 192.168.1.34
+  address: 127.0.0.1
+upload:
+  pictures:
+    uploadPath: file:./pictures
+    anonymousPicture: classpath:/static/images/anonymous.png
 spring:
   thymeleaf:
     cache: false
@@ -9,6 +13,13 @@ spring:
     locale: zh
   messages:
     cache-seconds: 0
+  http:
+    multipart:
+      maxFileSize: 1MB
+  social:
+    twitter:
+      appId:
+      appSecret:
 logging:
   level:
     org:
